<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EZRide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome To EZRide!</string>
    <string name="welcome_text">You have a few sign in options. You can sign in with Google+ (which will allow you to magically download your Google Calendar seamlessly), Facebook, or an EZRide account. Don\'t have an account? By signing in with Google+ or Facebook, an account will be auto-generated for you. You can always create an EZRide only account if you\'re not into the whole social networking thing.</string>
    <string name="ezride_login_button">EZRide</string>
    <string name="fb_login_button">Facebook</string>
    <string name="gplus_login_button">Google+</string>
    <string name="title_activity_ezride_login_signup">EZRideLoginSignupActivity</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="bio">About Me</string>

    <string-array name="map_view_items_array">
        <item>Calendar</item>
        <item>Groups</item>
        <item>Profile</item>
        <item>About</item>
    </string-array>
    <string-array name="groups_view_items_array">
        <item>Calendar</item>
        <item>Live Map</item>
        <item>Profile</item>
        <item>About</item>
    </string-array>

    <string name="action_websearch">Web search</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_ezride_sign_up">EZRideSignUpActivity</string>
    <string name="title_activity_ezride_login">EZRideLoginActivity</string>
    <string name="profile_action_save">Save</string>
    <string name="groups_action_add">Create</string>
    <string name="groups_action_join">Join</string>
    <string name="groups_action_refresh">Refresh</string>
    <string name="groups_popup_add_name">Group Name:</string>
    <string name="groups_popup_add_button_add">Continue</string>
    <string name="groups_popup_add_button_clear">Clear</string>
    <string name="groups_popup_add_button_cancel">Cancel</string>
    <string name="debug_profile_activity_button">Test Profile Activity</string>
    <string name="debug_groups_activity_button">Test Groups Activity</string>
    <string name="debug_calendar_activity_button">Test Calendar Activity</string>
    <string name="debug_map_activity_button">Test Map Activity</string>
    <string name="logging_in">Logging in...</string>
    <string name="realname">Real Name</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
