<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/profile_name_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/profile_email_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_name_label"
        android:layout_below="@+id/profile_name_label"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/gplus_login_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fb_login_screen_button"
        android:layout_centerHorizontal="true"
        android:text="@string/debug_profile_activity_button"
        android:onClick="gplusLogin"
        android:ems="10" />

    <Button
        android:id="@+id/fb_login_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_email_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/debug_groups_activity_button"
        android:onClick="fbLogin"
        android:ems="10" />

    <Button
        android:id="@+id/ezride_login_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gplus_login_screen_button"
        android:layout_centerHorizontal="true"
        android:onClick="ezrideLogin"
        android:text="@string/ezride_login_button"
        android:ems="10" />

</RelativeLayout>