<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EZRideLoginSignupActivity" >

    <EditText
        android:id="@+id/ezride_enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="100"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ezride_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ezride_enter_password"
        android:layout_below="@+id/ezride_enter_password"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="16dp"
        android:ems="6"
        android:text="@string/signup"
        android:onClick="ezrideSignUpButton_OnClick" />

    <Button
        android:id="@+id/ezride_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ezride_signup_button"
        android:layout_alignBottom="@+id/ezride_signup_button"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/ezride_signup_button"
        android:ems="6"
        android:text="@string/login"
        android:onClick="ezrideLoginButton_OnClick" />

    <EditText
        android:id="@+id/ezride_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ezride_enter_email"
        android:layout_below="@+id/ezride_enter_email"
        android:layout_marginTop="18dp"
        android:ems="100"
        android:hint="@string/password"
        android:inputType="textPassword" />

</RelativeLayout>
