<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EZRideSignUpActivity" >

    <EditText
        android:id="@+id/ezride_enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="100"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/ezride_enter_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ezride_enter_email"
        android:layout_below="@+id/ezride_enter_email"
        android:layout_marginTop="18dp"
        android:ems="100"
        android:hint="@string/bio"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/ezride_register_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ezride_enter_bio"
        android:layout_below="@+id/ezride_enter_bio"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="23dp"
        android:onClick="ezrideRegisterButton_onClick"
        android:text="@string/signup" />
    

</RelativeLayout>